--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <div class="score">
             <p>Score: <span id="score">0</span></p>
         </div>
+
+        <div id="final-image-container"></div> <!-- Contenedor para la imagen final -->
     </div>
 
     <script src="script.js"></script>
